--- a/index.html
+++ b/index.html
@@ -5,10 +5,168 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leader Board</title>
-  <!-- External Css Linking -->
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/b29e677b4f.js" crossorigin="anonymous"></script>
+    <!-- stylesheet -->
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  
+  <!-- Header -->
+  <header>
+
+  </header>
+  <main>
+    <section class="container">
+      <div class="top-players">
+        <h2 class="section-title">Top Players</h2>
+      <div class="players">
+        <div class="player">
+          <img src="images/players/player-1.png" alt="">
+          <h3 class="player-title"class="player-title">John Smit</h3>
+        </div>
+        <div class="player">
+          <img src="images/players/player-2.png" alt="">
+          <h3 class="player-title"class="player-title">Pro Rasel</h3>
+        </div>
+        <div class="player">
+          <img src="images/players/player-3.png" alt="">
+          <h3 class="player-title"class="player-title">Abu Sufian </h3>
+        </div>
+        <div class="player">
+          <img src="images/players/player-4.png" alt="">
+          <h3 class="player-title"class="player-title">Shajedul Karim</h3>
+        </div>
+        <div class="player">
+          <img src="images/players/player-5.png" alt="">
+          <h3 class="player-title"class="player-title">Maruf Ahmed</h3>
+        </div>
+        <div class="player">
+          <img src="images/players/player-6.png" alt="">
+          <h3 class="player-title"class="player-title">Muzahid</h3>
+        </div>
+      </div>
+      </div>
+      <hr>
+      <div class="blog-main">
+        <h2 class="section-title">Top Blogs</h2>
+        <div class="top-blogs">
+          <article class="blogs">
+            <div class="thumbnail">
+              <img src="./images/blogs/blog-1.png" alt="">
+            </div>
+            <div class="blog-post">
+              <h2 class="blog-title">13 of My Favorite UI/UX Goodies</h2>
+              <p class="blog-author">By <a href="#">Danny Sapia</a></p>
+            </div>
+          </article>
+          <article class="blogs">
+            <div class="thumbnail">
+              <img src="./images/blogs/blog-2.png" alt="">
+            </div>
+            <div class="blog-post">
+              <h2 class="blog-title">13 of My Favorite UI/UX Goodies</h2>
+              <p class="blog-author">By <a href="#">Danny Sapia</a></p>
+            </div>
+          </article>
+          <article class="blogs">
+            <div class="thumbnail">
+              <img src="./images/blogs/blog-3.png" alt="">
+            </div>
+            <div class="blog-post">
+              <h2 class="blog-title">13 of My Favorite UI/UX Goodies</h2>
+              <p class="blog-author">By <a href="#">Danny Sapia</a></p>
+            </div>
+          </article>
+          <article class="blogs">
+            <div class="thumbnail">
+              <img src="./images/blogs/blog-4.png" alt="">
+            </div>
+            <div class="blog-post">
+              <h2 class="blog-title">13 of My Favorite UI/UX Goodies</h2>
+              <p class="blog-author">By <a href="#">Danny Sapia</a></p>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+    <!-- Lates Course -->
+    <section class="container">
+      <h2 class="section-title">Latest Course</h2>
+      <div class="courses">
+        <div class="course">
+          <div class="course-thumbnail">
+            <img src="./images/courses/course-1.png" alt="">
+          </div>
+          <div class="course-details">
+            <h2 class="course-title">React - The Complete <br> Guide 2020</h2>
+          </div>
+          <div class="course-author">
+            <p class="author">Reed Krakoff.</p>
+          </div>
+          <div class="course-info">
+            <div class="user-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star down-rating"></i>
+              <span>4.5</span>
+            </div>
+            <div class="total-time">
+              <p><i class="far fa-clock"></i> 1:30hr</p>
+            </div>
+          </div>
+        </div>
+        <div class="course">
+          <div class="course-thumbnail">
+            <img src="./images/courses/course-2.png" alt="">
+          </div>
+          <div class="course-details">
+            <h2 class="course-title">React - The Complete <br> Guide 2020</h2>
+          </div>
+          <div class="course-author">
+            <p class="author">Reed Krakoff.</p>
+          </div>
+          <div class="course-info">
+            <div class="user-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star down-rating"></i>
+              <span>4.5</span>
+            </div>
+            <div class="total-time">
+              <p><i class="far fa-clock"></i> 1:30hr</p>
+            </div>
+          </div>
+        </div>
+        <div class="course">
+          <div class="course-thumbnail">
+            <img src="./images/courses/course-3.png" alt="">
+          </div>
+          <div class="course-details">
+            <h2 class="course-title">React - The Complete <br> Guide 2020</h2>
+          </div>
+          <div class="course-author">
+            <p class="author">Reed Krakoff.</p>
+          </div>
+          <div class="course-info">
+            <div class="user-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star down-rating"></i>
+              <span>4.5</span>
+            </div>
+            <div class="total-time">
+              <p><i class="far fa-clock"></i> 1:30hr</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
