comment line decorated well now

--- a/index.html
+++ b/index.html
@@ -5,18 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leader Board</title>
-    <!-- Font Awesome -->
+     <!------------------------------------
+         Font Awesome Icon
+        -------------------------------------->
     <script src="https://kit.fontawesome.com/b29e677b4f.js" crossorigin="anonymous"></script>
-    <!-- stylesheet -->
+     <!------------------------------------
+         External stylesheet section
+        -------------------------------------->
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <!-- Header -->
+  <!----------------------------
+     Header
+    ---------------------------->
   <header>
 
   </header>
   <main>
     <section class="container">
+      <!------------------------------------
+         Top Players Section
+        -------------------------------------->
       <div class="top-players">
         <h2 class="section-title">Top Players</h2>
       <div class="players">
@@ -47,6 +56,9 @@
       </div>
       </div>
       <hr>
+       <!------------------------------------
+         Blog Section
+        -------------------------------------->
       <div class="blog-main">
         <h2 class="section-title">Top Blogs</h2>
         <div class="top-blogs">
@@ -89,7 +101,9 @@
         </div>
       </div>
     </section>
-    <!-- Lates Course -->
+     <!------------------------------------
+         Course Content Section
+        -------------------------------------->
     <section class="container">
       <h2 class="section-title">Latest Course</h2>
       <div class="courses">
